--- a/demo02/package.json
+++ b/demo02/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cliente001",
+  "name": "demo02",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,10 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.37",
-    "vue-axios": "^3.4.1"
+    "vue": "^3.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
